Cubic interpolation and performance leak corrected

--- a/test/ForDevelopement/CubicInterpolationWeights.ipynb
+++ b/test/ForDevelopement/CubicInterpolationWeights.ipynb
@@ -203,13 +203,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "source": [
+    "m = 1 ## Assuming explicit derivative in the beginning\n",
+    "m = 2 ## Midpoint approximated with the same end value\n",
+    "m = 2//3 ## Mean of the 2 approaches\n",
+    "\n",
     "eqs_1 = [\n",
     "    di - h1, # f(0)\n",
     "    ai * Δ^3 + bi * Δ^2 + ci * Δ + di - h2, # f(Δ)\n",
     "    ci - 2*(h2 - h1)/3Δ,# f'(0)\n",
-    "    3ai * Δ^2 + 2bi * Δ + ci - (h3 - h1)/2Δ # f'(Δ)\n",
+    "    3ai * Δ^2 + 2bi * Δ + ci - (h3 - h1)/(m*Δ) # f'(Δ)\n",
     "]\n",
     "display(eqs_1)\n",
     "sol_1 = solve(eqs_1,(ai,bi,ci,di))\n",
@@ -224,14 +228,14 @@
     {
      "data": {
       "text/latex": [
-       "$\\left[ \\begin{array}{r}di - h_{i}\\\\ai Δ^{3} + bi Δ^{2} + ci Δ + di - h_{i+1}\\\\ci - \\frac{2 h_{i+1} - 2 h_{i}}{3 Δ}\\\\3 ai Δ^{2} + 2 bi Δ + ci - \\frac{h_{i+2} - h_{i}}{2 Δ}\\end{array} \\right]$\n"
+       "$\\left[ \\begin{array}{r}di - h_{i}\\\\ai Δ^{3} + bi Δ^{2} + ci Δ + di - h_{i+1}\\\\ci - \\frac{2 h_{i+1} - 2 h_{i}}{3 Δ}\\\\3 ai Δ^{2} + 2 bi Δ + ci - \\frac{3 \\left(h_{i+2} - h_{i}\\right)}{2 Δ}\\end{array} \\right]$\n"
       ],
       "text/plain": [
        "4-element Vector{Sym}:\n",
-       "                                       di - h_{i}\n",
-       "            ai*Δ^3 + bi*Δ^2 + ci*Δ + di - h_{i+1}\n",
-       "                 ci - (2*h_{i+1} - 2*h_{i})/(3*Δ)\n",
-       " 3*ai*Δ^2 + 2*bi*Δ + ci - (h_{i+2} - h_{i})/(2*Δ)"
+       "                                         di - h_{i}\n",
+       "              ai*Δ^3 + bi*Δ^2 + ci*Δ + di - h_{i+1}\n",
+       "                   ci - (2*h_{i+1} - 2*h_{i})/(3*Δ)\n",
+       " 3*ai*Δ^2 + 2*bi*Δ + ci - 3*(h_{i+2} - h_{i})/(2*Δ)"
       ]
      },
      "metadata": {},
@@ -252,13 +256,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}\\frac{5 δ^{3}}{6} - \\frac{7 δ^{2}}{6} - \\frac{2 δ}{3} + 1\\end{equation*}$\n"
+       "$\\begin{equation*}- \\frac{δ^{3}}{6} - \\frac{δ^{2}}{6} - \\frac{2 δ}{3} + 1\\end{equation*}$\n"
       ],
       "text/plain": [
-       "   3      2          \n",
-       "5⋅δ    7⋅δ    2⋅δ    \n",
-       "──── - ──── - ─── + 1\n",
-       " 6      6      3     "
+       "   3    2          \n",
+       "  δ    δ    2⋅δ    \n",
+       "- ── - ── - ─── + 1\n",
+       "  6    6     3     "
       ]
      },
      "metadata": {},
@@ -282,13 +286,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}\\frac{δ^{3}}{2} - \\frac{δ^{2}}{2}\\end{equation*}$\n"
+       "$\\begin{equation*}\\frac{3 δ^{3}}{2} - \\frac{3 δ^{2}}{2}\\end{equation*}$\n"
       ],
       "text/plain": [
-       " 3    2\n",
-       "δ    δ \n",
-       "── - ──\n",
-       "2    2 "
+       "   3      2\n",
+       "3⋅δ    3⋅δ \n",
+       "──── - ────\n",
+       " 2      2  "
       ]
      },
      "metadata": {},
@@ -299,13 +303,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "source": [
+    "m = 1 ## Assuming explicit derivative in the beginning\n",
+    "m = 2 ## Midpoint approximated with the same end value\n",
+    "m = 2//3 ## Mean of the 2 approaches\n",
+    "\n",
     "eqs_end = [\n",
     "    di - h1, # f(0)\n",
     "    ai * Δ^3 + bi * Δ^2 + ci * Δ + di - h2, # f(Δ)\n",
     "    ci - (h2 - h0)/2Δ,# f'(0)\n",
-    "    3ai * Δ^2 + 2bi * Δ + ci - (h2 - h1)/2Δ # f'(Δ)\n",
+    "    3ai * Δ^2 + 2bi * Δ + ci - (h2 - h1)/(m*Δ) # f'(Δ)\n",
     "]\n",
     "display(eqs_end)\n",
     "sol_end = solve(eqs_end,(ai,bi,ci,di))\n",
@@ -320,14 +328,14 @@
     {
      "data": {
       "text/latex": [
-       "$\\left[ \\begin{array}{r}di - h_{i}\\\\ai Δ^{3} + bi Δ^{2} + ci Δ + di - h_{i+1}\\\\ci - \\frac{h_{i+1} - h_{i-1}}{2 Δ}\\\\3 ai Δ^{2} + 2 bi Δ + ci - \\frac{h_{i+2} - h_{i}}{2 Δ}\\end{array} \\right]$\n"
+       "$\\left[ \\begin{array}{r}di - h_{i}\\\\ai Δ^{3} + bi Δ^{2} + ci Δ + di - h_{i+1}\\\\ci - \\frac{h_{i+1} - h_{i-1}}{2 Δ}\\\\3 ai Δ^{2} + 2 bi Δ + ci - \\frac{3 \\left(h_{i+1} - h_{i}\\right)}{2 Δ}\\end{array} \\right]$\n"
       ],
       "text/plain": [
        "4-element Vector{Sym}:\n",
-       "                                       di - h_{i}\n",
-       "            ai*Δ^3 + bi*Δ^2 + ci*Δ + di - h_{i+1}\n",
-       "                   ci - (h_{i+1} - h_{i-1})/(2*Δ)\n",
-       " 3*ai*Δ^2 + 2*bi*Δ + ci - (h_{i+2} - h_{i})/(2*Δ)"
+       "                                         di - h_{i}\n",
+       "              ai*Δ^3 + bi*Δ^2 + ci*Δ + di - h_{i+1}\n",
+       "                     ci - (h_{i+1} - h_{i-1})/(2*Δ)\n",
+       " 3*ai*Δ^2 + 2*bi*Δ + ci - 3*(h_{i+1} - h_{i})/(2*Δ)"
       ]
      },
      "metadata": {},
@@ -351,13 +359,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}\\frac{3 δ^{3}}{2} - \\frac{5 δ^{2}}{2} + 1\\end{equation*}$\n"
+       "$\\begin{equation*}\\frac{δ^{3}}{2} - \\frac{3 δ^{2}}{2} + 1\\end{equation*}$\n"
       ],
       "text/plain": [
-       "   3      2    \n",
-       "3⋅δ    5⋅δ     \n",
-       "──── - ──── + 1\n",
-       " 2      2      "
+       " 3      2    \n",
+       "δ    3⋅δ     \n",
+       "── - ──── + 1\n",
+       "2     2      "
       ]
      },
      "metadata": {},
@@ -366,13 +374,13 @@
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}- \\frac{3 δ^{3}}{2} + 2 δ^{2} + \\frac{δ}{2}\\end{equation*}$\n"
+       "$\\begin{equation*}\\frac{δ^{2}}{2} + \\frac{δ}{2}\\end{equation*}$\n"
       ],
       "text/plain": [
-       "     3           \n",
-       "  3⋅δ       2   δ\n",
-       "- ──── + 2⋅δ  + ─\n",
-       "   2            2"
+       " 2    \n",
+       "δ    δ\n",
+       "── + ─\n",
+       "2    2"
       ]
      },
      "metadata": {},
@@ -381,13 +389,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}\\frac{δ^{3}}{2} - \\frac{δ^{2}}{2}\\end{equation*}$\n"
+       "$\\begin{equation*}0\\end{equation*}$\n"
       ],
       "text/plain": [
-       " 3    2\n",
-       "δ    δ \n",
-       "── - ──\n",
-       "2    2 "
+       "0"
       ]
      },
      "metadata": {},
