Weak 2 order time stepping - multidof theory

--- a/test/ForDevelopement/Weak2OrderDistribution.ipynb
+++ b/test/ForDevelopement/Weak2OrderDistribution.ipynb
@@ -370,20 +370,136 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# _d_-dimensional system"
+    "# _d_-dimensional system with single noise source"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 141,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((g_{1}(t, x_{1}, x_{2}, x_{3}, x_{4}), 0), (g_{2}(t, x_{1}, x_{2}, x_{3}, x_{4}), 0), (g_{3}(t, x_{1}, x_{2}, x_{3}, x_{4}), 0), (g_{4}(t, x_{1}, x_{2}, x_{3}, x_{4}), σ))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "L0 = "
+    "using SymPy\n",
+    "d = 4\n",
+    "k = 4\n",
+    "@syms t σ\n",
+    "x = [Sym(\"x_{$i}\") for i in 1:d]\n",
+    "f = [SymFunction(\"f_{$i}\") for i in 1:d]\n",
+    "g = [SymFunction(\"g_{$i}\") for i in 1:d]\n",
+    "subrules = (((SymFunction(\"g_{$i}\")(t,x),0) for i in 1:k-1)...,((SymFunction(\"g_{$i}\")(t,x),σ) for i in k:d)...)\n",
+    "# g = ((0 for _ in 1:k-1)...,(SymFunction(\"g_{$i}\") for i in k:d)...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "L1 (generic function with 2 methods)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function L0(h,subrules = subrules)\n",
+    "    xi = eachindex(x);\n",
+    "    res = h(t,x).diff(t) + sum(f[k](t,x)*h(t,x).diff(x[k]) for k in xi) + 1//2*sum(sum(g[k](t,x)*g[l](t,x)*h(t,x).diff(x[k]).diff(x[l]) for l in xi) for k in xi)\n",
+    "    res.subs([subrules...]).doit()\n",
+    "end\n",
+    "function L1(h,subrules = subrules)\n",
+    "    xi = eachindex(x);\n",
+    "    res = sum(g[k](t,x)*h(t,x).diff(x[k]) for k in xi)\n",
+    "    res.subs([subrules...]).doit()\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\begin{equation*}\\frac{σ^{2} \\frac{\\partial^{2}}{\\partial x_{4}^{2}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)}}{2} + \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} \\frac{\\partial}{\\partial x_{1}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} + \\operatorname{f_{2}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} \\frac{\\partial}{\\partial x_{2}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} + \\operatorname{f_{3}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} \\frac{\\partial}{\\partial x_{3}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} + \\operatorname{f_{4}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} \\frac{\\partial}{\\partial x_{4}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} + \\frac{\\partial}{\\partial t} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)}\\end{equation*}$\n"
+      ],
+      "text/plain": [
+       "       2                                                                      \n",
+       " 2    ∂                                                                       \n",
+       "σ ⋅───────(f_{1}(t, x_{1}, x_{2}, x_{3}, x_{4}))                              \n",
+       "         2                                                                    \n",
+       "   ∂x_{4}                                                                     \n",
+       "──────────────────────────────────────────────── + f_{1}(t, x_{1}, x_{2}, x_{3\n",
+       "                       2                                                      \n",
+       "\n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "            ∂                                                                 \n",
+       "}, x_{4})⋅──────(f_{1}(t, x_{1}, x_{2}, x_{3}, x_{4})) + f_{2}(t, x_{1}, x_{2}\n",
+       "          ∂x_{1}                                                              \n",
+       "\n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                  ∂                                                           \n",
+       ", x_{3}, x_{4})⋅──────(f_{1}(t, x_{1}, x_{2}, x_{3}, x_{4})) + f_{3}(t, x_{1},\n",
+       "                ∂x_{2}                                                        \n",
+       "\n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                        ∂                                                     \n",
+       " x_{2}, x_{3}, x_{4})⋅──────(f_{1}(t, x_{1}, x_{2}, x_{3}, x_{4})) + f_{4}(t, \n",
+       "                      ∂x_{3}                                                  \n",
+       "\n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                                                                              \n",
+       "                              ∂                                            ∂  \n",
+       "x_{1}, x_{2}, x_{3}, x_{4})⋅──────(f_{1}(t, x_{1}, x_{2}, x_{3}, x_{4})) + ──(\n",
+       "                            ∂x_{4}                                         ∂t \n",
+       "\n",
+       "                                     \n",
+       "                                     \n",
+       "                                     \n",
+       "                                     \n",
+       "                                     \n",
+       "f_{1}(t, x_{1}, x_{2}, x_{3}, x_{4}))\n",
+       "                                     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "L0(f[1])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.3",
+   "display_name": "Julia 1.6.1",
    "language": "julia",
    "name": "julia-1.6"
   },
@@ -391,7 +507,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.6.1"
   },
   "orig_nbformat": 4
  },
