Higher order term computation

--- a/test/ForDevelopement/Weak2OrderDistribution.ipynb
+++ b/test/ForDevelopement/Weak2OrderDistribution.ipynb
@@ -375,34 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((g_{1}(t, x_{1}, x_{2}, x_{3}, x_{4}), 0), (g_{2}(t, x_{1}, x_{2}, x_{3}, x_{4}), 0), (g_{3}(t, x_{1}, x_{2}, x_{3}, x_{4}), 0), (g_{4}(t, x_{1}, x_{2}, x_{3}, x_{4}), σ))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "using SymPy\n",
-    "d = 4\n",
-    "k = 4\n",
-    "@syms t σ\n",
-    "x = [Sym(\"x_{$i}\") for i in 1:d]\n",
-    "f = [SymFunction(\"f_{$i}\") for i in 1:d]\n",
-    "g = [SymFunction(\"g_{$i}\") for i in 1:d]\n",
-    "subrules = (((SymFunction(\"g_{$i}\")(t,x),0) for i in 1:k-1)...,((SymFunction(\"g_{$i}\")(t,x),σ) for i in k:d)...)\n",
-    "# g = ((0 for _ in 1:k-1)...,(SymFunction(\"g_{$i}\") for i in k:d)...)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -419,73 +392,124 @@
     "function L0(h,subrules = subrules)\n",
     "    xi = eachindex(x);\n",
     "    res = h(t,x).diff(t) + sum(f[k](t,x)*h(t,x).diff(x[k]) for k in xi) + 1//2*sum(sum(g[k](t,x)*g[l](t,x)*h(t,x).diff(x[k]).diff(x[l]) for l in xi) for k in xi)\n",
-    "    res.subs([subrules...]).doit()\n",
+    "    if subrules isa Nothing\n",
+    "        res\n",
+    "    else\n",
+    "        res.subs([subrules...]).doit()\n",
+    "    end\n",
     "end\n",
     "function L1(h,subrules = subrules)\n",
     "    xi = eachindex(x);\n",
     "    res = sum(g[k](t,x)*h(t,x).diff(x[k]) for k in xi)\n",
-    "    res.subs([subrules...]).doit()\n",
+    "    if subrules isa Nothing\n",
+    "        res\n",
+    "    else\n",
+    "        res.subs([subrules...]).doit()\n",
+    "    end\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using SymPy\n",
+    "d = 2\n",
+    "k = 2\n",
+    "@syms t σ Δt ΔW ΔZ\n",
+    "x = [Sym(\"x_{$i}\") for i in 1:d];\n",
+    "f = [SymFunction(\"f_{$i}\") for i in 1:d];\n",
+    "g = [SymFunction(\"g_{$i}\") for i in 1:d];\n",
+    "subrules = (((SymFunction(\"g_{$i}\")(t,x),0) for i in 1:k-1)...,((SymFunction(\"g_{$i}\")(t,x),Sym(\"\\\\sigma_{$i}\")) for i in k:d)...);\n",
+    "# g = ((0 for _ in 1:k-1)...,(SymFunction(\"g_{$i}\") for i in k:d)...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\begin{equation*}\\frac{σ^{2} \\frac{\\partial^{2}}{\\partial x_{4}^{2}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)}}{2} + \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} \\frac{\\partial}{\\partial x_{1}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} + \\operatorname{f_{2}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} \\frac{\\partial}{\\partial x_{2}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} + \\operatorname{f_{3}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} \\frac{\\partial}{\\partial x_{3}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} + \\operatorname{f_{4}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} \\frac{\\partial}{\\partial x_{4}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)} + \\frac{\\partial}{\\partial t} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2},x_{3},x_{4} \\right)}\\end{equation*}$\n"
+       "$\\begin{equation*}\\sigma_{2} ΔZ \\frac{\\partial}{\\partial x_{2}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2} \\right)} + x_{1} + Δt^{2} \\left(\\frac{\\sigma_{2}^{2} \\frac{\\partial^{2}}{\\partial x_{2}^{2}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2} \\right)}}{4} + \\frac{\\operatorname{f_{1}}{\\left(t,x_{1},x_{2} \\right)} \\frac{\\partial}{\\partial x_{1}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2} \\right)}}{2} + \\frac{\\operatorname{f_{2}}{\\left(t,x_{1},x_{2} \\right)} \\frac{\\partial}{\\partial x_{2}} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2} \\right)}}{2} + \\frac{\\frac{\\partial}{\\partial t} \\operatorname{f_{1}}{\\left(t,x_{1},x_{2} \\right)}}{2}\\right) + Δt \\operatorname{f_{1}}{\\left(t,x_{1},x_{2} \\right)}\\end{equation*}$\n"
       ],
       "text/plain": [
-       "       2                                                                      \n",
-       " 2    ∂                                                                       \n",
-       "σ ⋅───────(f_{1}(t, x_{1}, x_{2}, x_{3}, x_{4}))                              \n",
-       "         2                                                                    \n",
-       "   ∂x_{4}                                                                     \n",
-       "──────────────────────────────────────────────── + f_{1}(t, x_{1}, x_{2}, x_{3\n",
-       "                       2                                                      \n",
+       "                                                           ⎛                2 \n",
+       "                                                           ⎜          2    ∂  \n",
+       "                                                           ⎜\\sigma_{2} ⋅──────\n",
+       "                                                           ⎜                  \n",
+       "                ∂                                        2 ⎜            ∂x_{2}\n",
+       "\\sigma_{2}⋅ΔZ⋅──────(f_{1}(t, x_{1}, x_{2})) + x_{1} + Δt ⋅⎜──────────────────\n",
+       "              ∂x_{2}                                       ⎝                  \n",
        "\n",
        "                                                                              \n",
        "                                                                              \n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "            ∂                                                                 \n",
-       "}, x_{4})⋅──────(f_{1}(t, x_{1}, x_{2}, x_{3}, x_{4})) + f_{2}(t, x_{1}, x_{2}\n",
-       "          ∂x_{1}                                                              \n",
+       "─(f_{1}(t, x_{1}, x_{2}))                            ∂                        \n",
+       "2                           f_{1}(t, x_{1}, x_{2})⋅──────(f_{1}(t, x_{1}, x_{2\n",
+       "                                                   ∂x_{1}                     \n",
+       "───────────────────────── + ──────────────────────────────────────────────────\n",
+       "   4                                                  2                       \n",
        "\n",
        "                                                                              \n",
        "                                                                              \n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "                  ∂                                                           \n",
-       ", x_{3}, x_{4})⋅──────(f_{1}(t, x_{1}, x_{2}, x_{3}, x_{4})) + f_{3}(t, x_{1},\n",
-       "                ∂x_{2}                                                        \n",
+       "                               ∂                              ∂               \n",
+       "}))   f_{2}(t, x_{1}, x_{2})⋅──────(f_{1}(t, x_{1}, x_{2}))   ──(f_{1}(t, x_{1\n",
+       "                             ∂x_{2}                           ∂t              \n",
+       "─── + ───────────────────────────────────────────────────── + ────────────────\n",
+       "                                2                                         2   \n",
+       "\n",
+       "          ⎞                            \n",
+       "          ⎟                            \n",
+       "          ⎟                            \n",
+       "}, x_{2}))⎟                            \n",
+       "          ⎟                            \n",
+       "──────────⎟ + Δt⋅f_{1}(t, x_{1}, x_{2})\n",
+       "          ⎠                            "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\begin{equation*}\\sigma_{2} ΔW + \\sigma_{2} ΔZ \\frac{\\partial}{\\partial x_{2}} \\operatorname{f_{2}}{\\left(t,x_{1},x_{2} \\right)} + x_{2} + Δt^{2} \\left(\\frac{\\sigma_{2}^{2} \\frac{\\partial^{2}}{\\partial x_{2}^{2}} \\operatorname{f_{2}}{\\left(t,x_{1},x_{2} \\right)}}{4} + \\frac{\\operatorname{f_{1}}{\\left(t,x_{1},x_{2} \\right)} \\frac{\\partial}{\\partial x_{1}} \\operatorname{f_{2}}{\\left(t,x_{1},x_{2} \\right)}}{2} + \\frac{\\operatorname{f_{2}}{\\left(t,x_{1},x_{2} \\right)} \\frac{\\partial}{\\partial x_{2}} \\operatorname{f_{2}}{\\left(t,x_{1},x_{2} \\right)}}{2} + \\frac{\\frac{\\partial}{\\partial t} \\operatorname{f_{2}}{\\left(t,x_{1},x_{2} \\right)}}{2}\\right) + Δt \\operatorname{f_{2}}{\\left(t,x_{1},x_{2} \\right)}\\end{equation*}$\n"
+      ],
+      "text/plain": [
+       "                                                                           ⎛  \n",
+       "                                                                           ⎜  \n",
+       "                                                                           ⎜\\s\n",
+       "                                                                           ⎜  \n",
+       "                                ∂                                        2 ⎜  \n",
+       "\\sigma_{2}⋅ΔW + \\sigma_{2}⋅ΔZ⋅──────(f_{2}(t, x_{1}, x_{2})) + x_{2} + Δt ⋅⎜──\n",
+       "                              ∂x_{2}                                       ⎝  \n",
+       "\n",
+       "              2                                                               \n",
+       "        2    ∂                                                                \n",
+       "igma_{2} ⋅───────(f_{2}(t, x_{1}, x_{2}))                            ∂        \n",
+       "                2                           f_{1}(t, x_{1}, x_{2})⋅──────(f_{2\n",
+       "          ∂x_{2}                                                   ∂x_{1}     \n",
+       "───────────────────────────────────────── + ──────────────────────────────────\n",
+       "                   4                                                  2       \n",
        "\n",
        "                                                                              \n",
        "                                                                              \n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "                        ∂                                                     \n",
-       " x_{2}, x_{3}, x_{4})⋅──────(f_{1}(t, x_{1}, x_{2}, x_{3}, x_{4})) + f_{4}(t, \n",
-       "                      ∂x_{3}                                                  \n",
+       "                                               ∂                              \n",
+       "}(t, x_{1}, x_{2}))   f_{2}(t, x_{1}, x_{2})⋅──────(f_{2}(t, x_{1}, x_{2}))   \n",
+       "                                             ∂x_{2}                           \n",
+       "─────────────────── + ───────────────────────────────────────────────────── + \n",
+       "                                                2                             \n",
        "\n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "                              ∂                                            ∂  \n",
-       "x_{1}, x_{2}, x_{3}, x_{4})⋅──────(f_{1}(t, x_{1}, x_{2}, x_{3}, x_{4})) + ──(\n",
-       "                            ∂x_{4}                                         ∂t \n",
-       "\n",
-       "                                     \n",
-       "                                     \n",
-       "                                     \n",
-       "                                     \n",
-       "                                     \n",
-       "f_{1}(t, x_{1}, x_{2}, x_{3}, x_{4}))\n",
-       "                                     "
+       "                          ⎞                            \n",
+       "                          ⎟                            \n",
+       "∂                         ⎟                            \n",
+       "──(f_{2}(t, x_{1}, x_{2}))⎟                            \n",
+       "∂t                        ⎟                            \n",
+       "──────────────────────────⎟ + Δt⋅f_{2}(t, x_{1}, x_{2})\n",
+       "            2             ⎠                            "
       ]
      },
      "metadata": {},
@@ -493,13 +517,61 @@
     }
    ],
    "source": [
-    "L0(f[1])"
+    "for i in 1:d\n",
+    "    mil = x[i] + f[i](t,x)*Δt + g[i](t,x)*ΔW + 1//2*L1(g[i],nothing)*(ΔW^2 - Δt);\n",
+    "    corr0 = 1//2*L0(f[i],nothing)*Δt^2 + L0(g[k])*(ΔW*Δt - ΔZ)\n",
+    "    corr1 = L1(f[i],nothing)*ΔZ\n",
+    "\n",
+    "    (mil + corr0 + corr1).subs(subrules).doit() |> display\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\sigma_{2}*ΔZ*Derivative(f_{1}(t, x_{1}, x_{2}), x_{2}) + x_{1} + Δt^2*(\\sigma_{2}^2*Derivative(f_{1}(t, x_{1}, x_{2}), (x_{2}, 2))/4 + f_{1}(t, x_{1}, x_{2})*Derivative(f_{1}(t, x_{1}, x_{2}), x_{1})/2 + f_{2}(t, x_{1}, x_{2})*Derivative(f_{1}(t, x_{1}, x_{2}), x_{2})/2 + Derivative(f_{1}(t, x_{1}, x_{2}), t)/2) + Δt*f_{1}(t, x_{1}, x_{2})"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "mil = x[i] + f[i](t,x)*Δt + g[i](t,x)*ΔW + 1//2*L1(g[i],nothing)*(ΔW^2 - Δt);\n",
+    "corr0 = 1//2*L0(f[i],nothing)*Δt^2 + L0(g[k])*(ΔW*Δt - ΔZ)\n",
+    "corr1 = L1(f[i],nothing)*ΔZ\n",
+    "\n",
+    "(mil + corr0 + corr1).subs(subrules).doit() |> print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
+    "&x_{1} + \\Delta t f_{1} + \\sigma_{2} \\frac{\\partial}{\\partial x_{2}}f_{1} \\Delta Z + \\\\\n",
+    "&\\left(\\frac{\\sigma_{2}^2}{4}\\frac{\\partial^2}{\\partial x_{2}^2}f_{1} + \\frac{1}{2}f_{1}\\frac{\\partial}{\\partial x_{1}}f_{1} + \\frac{1}{2}f_{2} \\frac{\\partial}{\\partial x_{1}}f_{1} + \\frac{1}{2}\\frac{\\partial}{\\partial t}f_{1})\\right) \\Delta t^2\n",
+    "\\end{split}\n",
+    "$$\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "& x_{2} + f_{2} \\Delta t + \\sigma_{2} \\Delta W + \\sigma_{2}\\frac{\\partial}{\\partial x_{2}}f_{2} \\Delta Z + \\\\\n",
+    "& \\left(\\frac{\\sigma_{2}^2}{4}\\frac{\\partial^2}{\\partial x_{2}^2}f_{2} + \\frac{1}{2}f_{1}\\frac{\\partial}{\\partial x_{1}}f_{2}(t, x_{1},x_{2}) + \\frac{1}{2}f_{2} \\frac{\\partial}{\\partial x_{2}}f_{2} + \\frac{1}{2}\\frac{\\partial}{\\partial t}f_{2}\\right) \\Delta t^2\n",
+    "\\end{split}\n",
+    "$$"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.1",
+   "display_name": "Julia 1.6.3",
    "language": "julia",
    "name": "julia-1.6"
   },
@@ -507,7 +579,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.1"
+   "version": "1.6.3"
   },
   "orig_nbformat": 4
  },
