--- a/test/ForDevelopement/PolynomialInterpolationWeights.ipynb
+++ b/test/ForDevelopement/PolynomialInterpolationWeights.ipynb
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -881,13 +881,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "disc_diff2 (generic function with 3 methods)"
+       "disc_diff2 (generic function with 2 methods)"
       ]
      },
      "metadata": {},
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -963,6 +963,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: `vendor()` is deprecated, use `BLAS.get_config()` and inspect the output instead\n",
+      "│   caller = npyinitialize() at numpy.jl:67\n",
+      "└ @ PyCall /home/htsykora/.julia/packages/PyCall/3fwVL/src/numpy.jl:67\n"
+     ]
     }
    ],
    "source": [
@@ -987,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1057,7 @@
    ],
    "source": [
     "# Beginning: not enforcing unknown conditions\n",
-    "cubic_pol = sum(symbols(\"c_{$i}\")*x^i for i in 0:5)\n",
+    "cubic_pol = sum(symbols(\"c_{$i}\")*x^i for i in 0:3)\n",
     "eqs = [\n",
     "    cubic_pol.subs(x,xs[2]) - ys[2], # f(0)\n",
     "    cubic_pol.subs(x,xs[3]) - ys[3], # f(Δ)\n",
@@ -1067,171 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\begin{equation*}0\\end{equation*}$\n"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\begin{equation*}- δ^{5} + \\frac{5 δ^{4}}{2} - \\frac{3 δ^{3}}{2} - δ + 1\\end{equation*}$\n"
-      ],
-      "text/plain": [
-       "          4      3        \n",
-       "   5   5⋅δ    3⋅δ         \n",
-       "- δ  + ──── - ──── - δ + 1\n",
-       "        2      2          "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\begin{equation*}2 δ^{5} - 5 δ^{4} + 3 δ^{3} + δ\\end{equation*}$\n"
-      ],
-      "text/plain": [
-       "   5      4      3    \n",
-       "2⋅δ  - 5⋅δ  + 3⋅δ  + δ"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\begin{equation*}- δ^{5} + \\frac{5 δ^{4}}{2} - \\frac{3 δ^{3}}{2}\\end{equation*}$\n"
-      ],
-      "text/plain": [
-       "          4      3\n",
-       "   5   5⋅δ    3⋅δ \n",
-       "- δ  + ──── - ────\n",
-       "        2      2  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Beginning: making up conditions\n",
-    "quintic_pol = sum(symbols(\"c_{$i}\")*x^i for i in 0:5)\n",
-    "eqs = [\n",
-    "    quintic_pol.subs(x,xs[2]) - ys[2], # f(0)\n",
-    "    quintic_pol.subs(x,xs[3]) - ys[3], # f(Δ)\n",
-    "    quintic_pol.diff(x).subs(x,xs[2]) - (ys[3] - ys[2])/(Δ),# f'(0)\n",
-    "    quintic_pol.diff(x).subs(x,xs[3]) - disc_diff(3,ys), # f'(Δ)\n",
-    "    quintic_pol.diff(x,2).subs(x,xs[2]),# f''(0)\n",
-    "    quintic_pol.diff(x,2).subs(x,xs[3]) - disc_diff2(3,ys), # f''(Δ)\n",
-    "]\n",
-    "eqs = expand.(eqs)\n",
-    "\n",
-    "sol = solve(eqs,cs)\n",
-    "appr = quintic_pol.subs(sol) |> expand\n",
-    "\n",
-    "for y in ys\n",
-    "    appr.coeff(y).subs(x/Δ,δ) |> display\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\begin{equation*}δ^{5} - \\frac{5 δ^{4}}{2} + \\frac{3 δ^{3}}{2} + \\frac{δ^{2}}{2} - \\frac{δ}{2}\\end{equation*}$\n"
-      ],
-      "text/plain": [
-       "        4      3    2    \n",
-       " 5   5⋅δ    3⋅δ    δ    δ\n",
-       "δ  - ──── + ──── + ── - ─\n",
-       "      2      2     2    2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\begin{equation*}- 2 δ^{5} + 5 δ^{4} - 3 δ^{3} - δ^{2} + 1\\end{equation*}$\n"
-      ],
-      "text/plain": [
-       "     5      4      3    2    \n",
-       "- 2⋅δ  + 5⋅δ  - 3⋅δ  - δ  + 1"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\begin{equation*}δ^{5} - \\frac{5 δ^{4}}{2} + \\frac{3 δ^{3}}{2} + \\frac{δ^{2}}{2} + \\frac{δ}{2}\\end{equation*}$\n"
-      ],
-      "text/plain": [
-       "        4      3    2    \n",
-       " 5   5⋅δ    3⋅δ    δ    δ\n",
-       "δ  - ──── + ──── + ── + ─\n",
-       "      2      2     2    2"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\begin{equation*}0\\end{equation*}$\n"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# End\n",
-    "quintic_pol = sum(symbols(\"c_{$i}\")*x^i for i in 0:5)\n",
-    "eqs = [\n",
-    "    quintic_pol.subs(x,xs[2]) - ys[2], # f(0)\n",
-    "    quintic_pol.subs(x,xs[3]) - ys[3], # f(Δ)\n",
-    "    quintic_pol.diff(x).subs(x,xs[2]) - disc_diff(2,ys),# f'(0)\n",
-    "    quintic_pol.diff(x).subs(x,xs[3]) - (ys[3] - ys[2])/(Δ), # f'(Δ)\n",
-    "    quintic_pol.diff(x,2).subs(x,xs[2]) - disc_diff2(2,ys),# f''(0)\n",
-    "    quintic_pol.diff(x,2).subs(x,xs[3]), # f''(Δ)\n",
-    "]\n",
-    "eqs = expand.(eqs)\n",
-    "\n",
-    "sol = solve(eqs, cs)\n",
-    "appr = quintic_pol.subs(sol) |> expand\n",
-    "\n",
-    "for y in ys\n",
-    "    appr.coeff(y).subs(x/Δ,δ) |> display\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1308,19 +1153,98 @@
     "    appr.coeff(y).subs(x/Δ,δ) |> display\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\begin{equation*}c_{0} + c_{1} x + c_{2} x^{2} + c_{3} x^{3}\\end{equation*}$\n"
+      ],
+      "text/plain": [
+       "                         2          3\n",
+       "c_{0} + c_{1}⋅x + c_{2}⋅x  + c_{3}⋅x "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cubic_pol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\left[ \\begin{array}{r}c_{0} - y_{i}\\\\c_{0} + c_{1} Δ + c_{2} Δ^{2} + c_{3} Δ^{3} - y_{i+1}\\\\c_{1} - \\frac{y_{i+1}}{2 Δ} + \\frac{y_{i-1}}{2 Δ}\\\\2 c_{2} - \\frac{y_{i+1}}{Δ^{2}} - \\frac{y_{i-1}}{Δ^{2}} + \\frac{2 y_{i}}{Δ^{2}}\\end{array} \\right]$\n"
+      ],
+      "text/plain": [
+       "4-element Vector{Sym}:\n",
+       "                                     c_{0} - y_{i}\n",
+       " c_{0} + c_{1}*Δ + c_{2}*Δ^2 + c_{3}*Δ^3 - y_{i+1}\n",
+       "             c_{1} - y_{i+1}/(2*Δ) + y_{i-1}/(2*Δ)\n",
+       " 2*c_{2} - y_{i+1}/Δ^2 - y_{i-1}/Δ^2 + 2*y_{i}/Δ^2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "eqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{Any, Any} with 4 entries:\n",
+       "  c_{1} => (y_{i+1} - y_{i-1})/(2*Δ)\n",
+       "  c_{2} => (y_{i+1} + y_{i-1} - 2*y_{i})/(2*Δ^2)\n",
+       "  c_{3} => 0\n",
+       "  c_{0} => y_{i}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.3",
+   "display_name": "Julia 1.7.0-rc2",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.7.0-rc2"
   },
   "orig_nbformat": 4
  },
